Change "change button" position to percentage

--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ a:hover, .btn-a:hover {
 
 .order-section#change {
     position: absolute;
-    right: 2rem;
+    right: 7.5%;
 }
 
 .attribution {
