--- a/style.css
+++ b/style.css
@@ -67,14 +67,16 @@ h1 {
     font-size: x-large;
 }
 
-a, .btn-a {
+a,
+.btn-a {
     border: none;
     background: none;
     color: var(--bright-blue);
     text-decoration: underline;
 }
 
-a:hover, .btn-a:hover {
+a:hover,
+.btn-a:hover {
     opacity: 0.6;
     cursor: pointer;
     text-decoration: none;
@@ -82,10 +84,13 @@ a:hover, .btn-a:hover {
 
 .btn-submit {
     border: none;
-    padding: .7rem;
+    padding: 0.7rem;
     color: white;
     border-radius: 8px;
     background: var(--bright-blue);
+    box-shadow: 0px 16px 8px 0px hsla(245, 75%, 52%, 0.15);
+    -webkit-box-shadow: 0px 16px 8px 0px hsla(245, 75%, 52%, 0.15);
+    -moz-box-shadow: 0px 16px 8px 0px hsla(245, 75%, 52%, 0.15);
 }
 
 .btn-submit:hover {
@@ -97,7 +102,7 @@ a:hover, .btn-a:hover {
 .btn-cancel {
     border: none;
     background: none;
-    color: rgb(0,0,0);
+    color: rgb(0, 0, 0);
     opacity: 0.6;
 }
 
@@ -118,6 +123,10 @@ a:hover, .btn-a:hover {
     margin: 1.5rem;
     min-width: 320px;
     max-width: 450px;
+    border-radius: 12px;
+    box-shadow: 0px 10px 8px 0px hsla(245, 75%, 52%, 0.1);
+    -webkit-box-shadow: 0px 10px 8px 0px hsla(245, 75%, 52%, 0.1);
+    -moz-box-shadow: 0px 10px 8px 0px hsla(245, 75%, 52%, 0.1);
 }
 
 .card-header {
